<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/large_margin_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnRetry"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivNetworkError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/do_extra_large_margin_padding"
            android:layout_marginBottom="@dimen/large_margin_padding"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_no_internet" />

        <TextView
            android:id="@+id/tvNetworkError"
            android:textColor="@color/colorPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_no_connection"
            android:textSize="@dimen/x_large_text" />

        <TextView
            android:id="@+id/tvNetworkErrorMessage"
            style="@style/TextNormalRegularGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/do_extra_large_margin_padding"
            android:layout_marginTop="@dimen/common_margin_normal"
            android:layout_marginEnd="@dimen/do_extra_large_margin_padding"
            android:layout_marginBottom="@dimen/extra_large_margin_padding"
            android:gravity="center"
            android:text="@string/no_connection_msg"
            android:textColor="@color/darker_gray" />


    </LinearLayout>


    <Button
        android:id="@+id/btnRetry"
        style="@style/YellowBtnTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_padding"
        android:layout_marginEnd="@dimen/small_margin_padding"
        android:layout_marginBottom="@dimen/extra_large_margin_padding"
        android:gravity="center"
        android:text="@string/title_retry"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>