<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="loginViewModel"
            type="com.hack.easyhomeloan.activities.login.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                style="@style/CardViewStyle"
                android:layout_margin="@dimen/dimen_ten">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_eighteen"
                        app:layout_constraintTop_toTopOf="parent">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <ImageView
                                android:id="@+id/iv_vgLogo"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dimen_fifty"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="@dimen/dimen_fifty"
                                android:contentDescription="@null"
                                android:src="@mipmap/logo_dbs_home" />

                            <TextView
                                android:id="@+id/tvLoginTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/iv_vgLogo"
                                android:layout_centerHorizontal="true"
                                android:text="@string/app_name"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/dimen_twenty_five"
                                android:textStyle="bold" />

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/dimen_twenty_five"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/dimen_ten"
                                android:layout_marginBottom="@dimen/dimen_ten"
                                android:text="@string/userId"
                                android:textColor="@color/colorWhite"
                                android:textSize="@dimen/x_large_text"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/etUserName"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:background="@drawable/et_gray_border"
                                android:hint="@string/userName"
                                android:imeOptions="actionNext"
                                android:inputType="text"
                                android:padding="@dimen/dimen_five"
                                android:singleLine="true"
                                android:text="@={loginViewModel.userId}"
                                android:textSize="@dimen/medium_text" />

                            <TextView
                                android:id="@+id/tvWarningText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_five"
                                android:text="@{loginViewModel.errorText}"
                                android:textColor="@color/colorRed" />

                            <Button
                                android:id="@+id/btnLogin"
                                style="@style/ButtonBackground.Ripple"
                                android:layout_marginTop="@dimen/dimen_thirty_five"
                                android:onClick="@{(view)->loginViewModel.onViewClicks(view)}"
                                android:text="@string/btnLogin" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>


        <ss.com.bannerslider.Slider
            android:id="@+id/bottomCarousal"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="@dimen/dimen_one"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:slider_animateIndicators="true"
            app:slider_emptyView="@layout/banner_empty_view"
            app:slider_interval="5000"
            app:slider_loopSlides="true"
            app:slider_selectedSlideIndicator="@drawable/indicator_circle_selected"
            app:slider_unselectedSlideIndicator="@drawable/indicator_circle_unselected" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>